--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/">Brand</a>
+                <a class="navbar-brand" href="#/">Team Allo' Allo'</a>
             </div>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
