--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,8 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/controllers/how.js"></script>
-
+        <script src="scripts/material.min.js"></script>
+        <script src="scripts/ripples.min.js"></script>
         <script>
             $(document).ready(function() {
                 $.material.init();
